# rules_grafana

./: .gitignore  LICENSE  README.md  WORKSPACE
example/: BUILD.bazel  datasources.yaml  sample.py
grafana/: BUILD.bazel  grafana.bzl  image.bzl  requirements.in  requirements.txt  uid_injector.py  workspace.bzl
grafana/config/: entrypoint.sh  grafana.ini
grafana/config/provisioning/: dashboards.yaml
test/: BUILD.bazel  dash.py  docker_tests.yaml  docker_with_plugins_tests.yaml  existing_uid.json  no_uid.json  test.py
