load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

py_binary(
    name = "uid_injector",
    srcs = ["uid_injector.py"],
    python_version = "PY3",
    visibility = ["//visibility:public"],
)

compile_pip_requirements(name = "requirements")

exports_files(glob(["config/**"]))
