load("@io_bazel_rules_grafana//grafana:grafana.bzl", "json_dashboards", "py_dashboards")

json_dashboards(
    name = "json_dashboards",
    srcs = [
        "existing_uid.json",
        "no_uid.json",
    ],
)

py_dashboards(
    name = "py_dashboards",
    srcs = ["dash.py"],
)

py_test(
    name = "json_no_uid_test",
    srcs = ["test.py"],
    args = [
        "$(location :no_uid.generated.json)",
        "no_uid_json",
    ],
    data = [":no_uid.generated.json"],
    main = "test.py",
)

py_test(
    name = "json_existing_uid_test",
    srcs = ["test.py"],
    args = [
        "$(location :existing_uid.generated.json)",
        "keep_my_uid",
    ],
    data = [":existing_uid.generated.json"],
    main = "test.py",
)

py_test(
    name = "py_dash_test",
    srcs = ["test.py"],
    args = [
        "$(location :dash.generated.json)",
        "dash_py_json",
    ],
    data = [":dash.generated.json"],
    main = "test.py",
)
